--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "ci": "yarn install --frozen-lockfile",
+    "test:ci": "jest --json --outputFile=jest-report.json"
   },
   "dependencies": {
     "react": "18.2.0",
