--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -21,6 +21,11 @@ jobs:
         with:
           node-version: 18
           cache: "yarn"
+      - name: Setup Java JDK
+        uses: actions/setup-java@v4.2.1
+        with: 
+          java-version: 17
+          distribution: 'zulu'
 
       - name: Install Node modules
         run: yarn ci
